move v1_2_20070413 tag