@@ -11,25 +11,24 @@ package com.finalist.cmsc.security;
 
 import java.util.*;
 
-
 import javax.servlet.http.HttpServletRequest;
 
 import org.mmbase.bridge.*;
 import org.mmbase.bridge.util.SearchUtil;
-import org.mmbase.security.implementation.cloudcontext.builders.Contexts;
 import org.mmbase.util.logging.Logger;
 import org.mmbase.util.logging.Logging;
 
 import com.finalist.cmsc.mmbase.TreePathComparator;
 import com.finalist.cmsc.mmbase.TreeUtil;
+import com.finalist.cmsc.security.builders.Contexts;
 import com.finalist.cmsc.util.NameUtil;
 
 
-public final class SecurityUtil {
+public class SecurityUtil {
 
 
     /** MMbase logging system */
-    private static final Logger log = Logging.getLoggerInstance(SecurityUtil.class.getName());
+    private static Logger log = Logging.getLoggerInstance(SecurityUtil.class.getName());
 
     private static final String CMSC_USERROLES = "cmsc.userroles.";
 
@@ -44,14 +43,14 @@ public final class SecurityUtil {
     public static final String NUMBER_FIELD = "number";
     public static final String USERNAME_FIELD = "username";
     public static final String ROLE_FIELD = "role";
-
+    
     private static final String DESTINATION = "DESTINATION";
     private static final String SOURCE = "SOURCE";
 
     private SecurityUtil() {
         // utility
     }
-
+    
     public static Node getUserNode(Cloud userCloud) {
 //        User user = (User) userCloud.getUser();
 //        return userCloud.getNode(user.getNode().getNumber());
@@ -61,7 +60,7 @@ public final class SecurityUtil {
     public static Node getUserNode(Cloud cloud, String username) {
         return SearchUtil.findNode(cloud, USER, USERNAME_FIELD, username);
     }
-
+    
     public static boolean isLoggedInUser(Cloud cloud, Node userNode) {
 //        User user = (User) cloud.getUser();
         return cloud.getUser().getIdentifier().equals(userNode.getStringValue(USERNAME_FIELD));
@@ -89,15 +88,7 @@ public final class SecurityUtil {
 
           // most specific keys are first in order so when the path of the channel startswith
           // the keypath we have the channel where the rights are from inherited.
-          boolean onPath = false;
-          if (path.length() == keyPath.length()) {
-             onPath = path.equals(keyPath);
-          }
-          else {
-             onPath = path.startsWith(keyPath + "/");
-          }
-          
-          if (onPath) {
+          if (path.startsWith(keyPath)) {
              UserRole userRole = channelsWithRole.get(keyPath);
              // when path is equal to the keypath than is the role not inherited
              resultRole = new UserRole(userRole.getRole(), !path.equals(keyPath));
@@ -106,7 +97,7 @@ public final class SecurityUtil {
        }
        return resultRole;
     }
-
+    
     public static Map<Integer,UserRole> buildRolesFromRequest(HttpServletRequest request) {
         Map<Integer,UserRole> roles = new HashMap<Integer,UserRole>();
         Enumeration<String> requestEnum = request.getParameterNames();
@@ -115,10 +106,10 @@ public final class SecurityUtil {
            if (name.startsWith("role_")) {
               String role = request.getParameter(name);
               if (!role.equals("-1")) {
-                 roles.put( Integer.valueOf(name.substring(5)), new UserRole( Integer.parseInt(role),false));
+                 roles.put( new Integer(name.substring(5)), new UserRole( Integer.parseInt(role),false));
               }
               else {
-                 roles.put( Integer.valueOf(name.substring(5)), null);
+                 roles.put( new Integer(name.substring(5)), null);
               }
            }
         }
@@ -127,16 +118,17 @@ public final class SecurityUtil {
 
     public static TreeMap<String,UserRole> getLoggedInRoleMap(Cloud cloud, String managerName,
             String relationName, String fragmentFieldname) {
-        LinkedHashMap<String, String> treeManagers = new LinkedHashMap<String, String>();
-        treeManagers.put(managerName, fragmentFieldname);
-        return getLoggedInRoleMap(cloud, treeManagers, relationName);
+
+        String[] treeManagers = new String[] { managerName };
+        String[] fragmentFieldnames = new String[] { fragmentFieldname };
+        return getLoggedInRoleMap(cloud, treeManagers, relationName, fragmentFieldnames);
     }
 
+    
+    public static TreeMap<String, UserRole> getLoggedInRoleMap(Cloud cloud, String[] treeManagers,
+            String relationName, String[] fragmentFieldname) {
 
-    public static TreeMap<String, UserRole> getLoggedInRoleMap(Cloud cloud,  LinkedHashMap<String,String> treeManagers,
-            String relationName) {
-
-        String channelName = TreeUtil.getRootManager(treeManagers);
+        String channelName = treeManagers[0];
         TreeMap<String, UserRole> channelsWithRole = (TreeMap<String, UserRole>) cloud
                 .getProperty(CMSC_USERROLES + channelName);
         if (channelsWithRole == null) {
@@ -144,51 +136,42 @@ public final class SecurityUtil {
             channelsWithRole = getNewRolesMap();
 
             Node user = getUserNode(cloud);
-            getUserRoleMap(user, treeManagers, relationName, channelsWithRole);
+            getUserRoleMap(user, treeManagers, relationName, fragmentFieldname, channelsWithRole);
 
             cloud.setProperty(CMSC_USERROLES + channelName, channelsWithRole);
         }
         return channelsWithRole;
     }
 
-	public static void getUserRoleMap(Node user,  LinkedHashMap<String,String> treeManagers, String relationName, TreeMap<String, UserRole> channelsWithRole) {
+	public static void getUserRoleMap(Node user, String[] treeManagers, String relationName, String[] fragmentFieldname, TreeMap<String, UserRole> channelsWithRole) {
         checkUser(user);
 		NodeList groups = getGroups(user);
 		if (groups.size() >= 1) {
 		    Node group = groups.getNode(0);
-		    fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName);
+		    fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName, fragmentFieldname);
 		    if (groups.size() > 1) {
 		        for (int i = 1; i < groups.size(); i++) {
 		            TreeMap<String, UserRole> extraRoles = getNewRolesMap();
 		            Node extraGroup = groups.getNode(i);
-		            fillChannelsWithRole(extraGroup, extraRoles, treeManagers, relationName);
+		            fillChannelsWithRole(extraGroup, extraRoles, treeManagers, relationName, fragmentFieldname);
 
-                  // upgrade user role map based on the data of the new group data map
-                  for (Map.Entry<String, UserRole> entry : channelsWithRole.entrySet()) {
-                     String path = entry.getKey();
-                     UserRole userRole = entry.getValue();
-                     UserRole newGroupRole = getRole(path, extraRoles);
-                     if (newGroupRole != null && userRole.getRole().getId() < newGroupRole.getRole().getId()) {
-                         channelsWithRole.put(path, newGroupRole);
-                     }
-                 }
-
-                 // add missing data to user role map based on new group data map
-                 for (Map.Entry<String, UserRole> entry : extraRoles.entrySet()) {
-                     String extraPath = entry.getKey();
-                     UserRole newGroupRole = entry.getValue();
-                     UserRole channelRole = getRole(extraPath, channelsWithRole);
-                     Role userRole;
-                     if (channelRole == null) {
-                        userRole = Role.NONE;
-                     }
-                     else {
-                        userRole = channelRole.getRole();
-                     }
-                     if (userRole.getId() < newGroupRole.getRole().getId()) {
-                         channelsWithRole.put(extraPath, newGroupRole);
-                     }
-                 }
+		            for (Map.Entry<String, UserRole> entry : channelsWithRole.entrySet()) {
+		                String path = entry.getKey();
+		                UserRole channelRole = entry.getValue();
+		                UserRole extraRole = getRole(path, extraRoles);
+		                if (extraRole != null && channelRole.getRole().getId() < extraRole.getRole().getId()) {
+		                    channelsWithRole.put(path, extraRole);
+		                }
+		            }
+		            
+		            for (Map.Entry<String, UserRole> entry : extraRoles.entrySet()) {
+		                String extraPath = entry.getKey();
+		                UserRole extraRole = entry.getValue();
+		                UserRole channelRole = getRole(extraPath, channelsWithRole);
+		                if (channelRole != null && channelRole.getRole().getId() < extraRole.getRole().getId()) {
+		                    channelsWithRole.put(extraPath, extraRole);
+		                }
+		            }
 		        }
 		    }
 		}
@@ -201,9 +184,9 @@ public final class SecurityUtil {
     public static void fillChannelsWithRole(Node group, TreeMap<String,UserRole> channelsWithRole, String managerName,
             String relationName, String fragmentFieldname) {
         checkGroup(group);
-        LinkedHashMap<String,String> treeManagers = new LinkedHashMap<String, String>();
-        treeManagers.put(managerName, fragmentFieldname);
-        fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName);
+        String[] treeManagers = new String[] { managerName };
+        String[] fragmentFieldnames = new String[] { fragmentFieldname };
+        fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName, fragmentFieldnames);
     }
 
     /**
@@ -215,54 +198,52 @@ public final class SecurityUtil {
      * @param fragmentFieldname fieldname the path is constructed with
      */
     public static void fillChannelsWithRole(Node group, TreeMap<String,UserRole> channelsWithRole,
-            LinkedHashMap<String,String> treeManagers, String relationName) {
+            String[] treeManagers, String relationName, String[] fragmentFieldname) {
         checkGroup(group);
         Cloud cloud = group.getCloud();
-        List<String> managers = TreeUtil.convertToList(treeManagers);
 
-        for (int i = managers.size() - 1; i >= 0; i--) {
-            String managerName = managers.get(i);
+        for (int i = treeManagers.length - 1; i >= 0; i--) {
+            String managerName = treeManagers[i];
 
             if (cloud.hasRelationManager(GROUP, managerName, ROLEREL)) {
                 // retrieve a list of all channels with a rolerel to this group
-                NodeList channelNodeList = cloud.getList(null,
-                        managerName + "," + ROLEREL + "," + GROUP,
-                        ROLEREL + "." + ROLE_FIELD+ ", " + managerName + "." + NUMBER_FIELD,
+                NodeList channelNodeList = cloud.getList(null, 
+                        managerName + "," + ROLEREL + "," + GROUP, 
+                        ROLEREL + "." + ROLE_FIELD+ ", " + managerName + "." + NUMBER_FIELD, 
                         "[" + GROUP + "." + NUMBER_FIELD + "] = " + group.getNumber(),
                         null, null, null, true);
-
+    
                 NodeIterator nodeIterator = channelNodeList.nodeIterator();
                 while (nodeIterator.hasNext()) {
                     Node channelRoleGroupNode = nodeIterator.nextNode();
                     Node channelNode = cloud.getNode( channelRoleGroupNode.getStringValue(managerName + "." + NUMBER_FIELD));
                     // no path found for this channel in cache retrieve it from mmbase
-                    String path = TreeUtil.getPathToRootString(channelNode, treeManagers, relationName, true);
+                    String path = TreeUtil.getPathToRootString(channelNode, treeManagers, relationName, fragmentFieldname, true);
                     int role = channelRoleGroupNode.getIntValue(ROLEREL + "." + ROLE_FIELD);
                     channelsWithRole.put(path, new UserRole(role, false));
                 }
             }
         }
     }
-
+    
     public static void setGroupRights(Cloud cloud, Node group, Map<Integer, UserRole> rights, String managerName) {
         checkGroup(group);
-        List<String> treeManagers = new ArrayList<String>();
-        treeManagers.add(managerName);
+        String[] treeManagers = new String[] { managerName };
         setGroupRights(cloud, group, rights, treeManagers);
     }
-
-    public static void setGroupRights(Cloud cloud, Node group, Map<Integer, UserRole> rights, List<String> treeManagers) {
+    
+    public static void setGroupRights(Cloud cloud, Node group, Map<Integer, UserRole> rights, String[] treeManagers) {
         checkGroup(group);
         clearUserRoles(cloud, treeManagers);
-
+        
         List<Integer> rolesDone = new ArrayList<Integer>();
-
+        
         for (String managerName : treeManagers) {
             if (cloud.hasRelationManager(GROUP, managerName, ROLEREL)) {
                 RelationList list = group.getRelations(ROLEREL, cloud.getNodeManager(managerName), DESTINATION);
                 for (RelationIterator iter = list.relationIterator(); iter.hasNext();) {
                    Relation rolerel = iter.nextRelation();
-                   Integer channelNumber = Integer.valueOf(rolerel.getDestination().getNumber());
+                   Integer channelNumber = new Integer(rolerel.getDestination().getNumber());
                    if (rights.containsKey(channelNumber)) {
                       rolesDone.add(channelNumber);
                       UserRole role = rights.get(channelNumber);
@@ -288,34 +269,34 @@ public final class SecurityUtil {
         }
     }
 
-    public static void clearUserRoles(Cloud cloud, List<String> treeManagers) {
-        cloud.setProperty(CMSC_USERROLES + TreeUtil.getRootManager(treeManagers), null);
+    public static void clearUserRoles(Cloud cloud, String[] treeManagers) {
+        cloud.setProperty(CMSC_USERROLES + treeManagers[0], null);
     }
 
 
     public static void clearUserRoles(Cloud cloud) {
-        for (Iterator<Object> iter = cloud.getProperties().keySet().iterator(); iter.hasNext();) {
-            String property = iter.next().toString();
+        for (Iterator<String> iter = cloud.getProperties().keySet().iterator(); iter.hasNext();) {
+            String property = iter.next();
             if (property.startsWith(CMSC_USERROLES)) {
                 cloud.setProperty(property, null);
             }
         }
     }
-
-    public static void addRole(Cloud cloud, String channelNumber, Node group, Role role, List<String> treeManagers) {
+    
+    public static void addRole(Cloud cloud, String channelNumber, Node group, Role role,  String[] treeManagers) {
         Node channelNode = cloud.getNode(channelNumber);
         addRole(cloud, channelNode, group, role, treeManagers);
     }
-
-    public static void addRole(Cloud cloud, Node channelNode, Node group, Role role,  List<String> treeManagers) {
+    
+    public static void addRole(Cloud cloud, Node channelNode, Node group, Role role,  String[] treeManagers) {
         addRole(group, channelNode, role);
         clearUserRoles(cloud, treeManagers);
     }
-
+    
     public static void addRole(Node group, Node channelNode, Role role) {
         checkGroup(group);
 
-        RelationManager rolemanager =
+        RelationManager rolemanager = 
             group.getCloud().getRelationManager(GROUP, channelNode.getNodeManager().getName(), ROLEREL);
           Relation relation = rolemanager.createRelation(group, channelNode);
           relation.setIntValue(ROLE_FIELD, role.getId());
@@ -340,7 +321,7 @@ public final class SecurityUtil {
           }
        }
     }
-
+    
     public static boolean isWriter(UserRole role) {
         return role.getRole().getId() >= Role.WRITER.getId();
     }
@@ -357,16 +338,16 @@ public final class SecurityUtil {
         return role.getRole().getId() >= Role.WEBMASTER.getId();
     }
 
-    public static TreeMap<String, UserRole> getRoleMap(LinkedHashMap<String, String> treeManagers, String relationName, Node group) {
+    public static TreeMap<String, UserRole> getRoleMap(String[] treeManagers, String relationName, String[] fragmentFieldnames, Node group) {
         TreeMap<String, UserRole> channelsWithRole = getNewRolesMap();
-        fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName);
+        fillChannelsWithRole(group, channelsWithRole, treeManagers, relationName, fragmentFieldnames);
         return channelsWithRole;
     }
 
     public static TreeMap<String, UserRole> getRoleMap(String managerName, String relationName, String fragmentFieldname, Node group) {
-        LinkedHashMap<String, String> treeManagers = new LinkedHashMap<String, String>();
-        treeManagers.put(managerName, fragmentFieldname);
-        return getRoleMap(treeManagers, relationName, group);
+        String[] treeManagers = new String[] { managerName };
+        String[] fragmentFieldnames = new String[] { fragmentFieldname };
+        return getRoleMap(treeManagers, relationName, fragmentFieldnames, group);
     }
 
     public static Node getAdministratorsGroup(Cloud cloud) {
@@ -419,7 +400,7 @@ public final class SecurityUtil {
                 r.delete();
             }
         }
-
+        
         clearUserRoles(cloud);
     }
 
@@ -438,7 +419,7 @@ public final class SecurityUtil {
         checkUser(user);
         return user.getRelatedNodes(GROUP, CONTAINS, SOURCE);
     }
-
+    
     public static Node getRank(Node userNode) {
         checkUser(userNode);
         Node rankNode = null;
@@ -466,7 +447,7 @@ public final class SecurityUtil {
     }
 
     public static Node getContext(Cloud cloud) {
-        int newContext = Contexts.getBuilder().getDefaultContextNode().getNumber();
+        int newContext = ((Contexts) Contexts.getBuilder()).getDefaultContextNode().getNumber();
         Node newContextNode = cloud.getNode(newContext);
         return newContextNode;
     }
@@ -474,8 +455,8 @@ public final class SecurityUtil {
     public static String getFullname(Node user) {
         checkUser(user);
 
-        return NameUtil.getFullName(user.getStringValue("firstname"),
-                user.getStringValue("prefix"),
+        return NameUtil.getFullName(user.getStringValue("firstname"), 
+                user.getStringValue("prefix"), 
                 user.getStringValue("surname"));
     }
 
@@ -491,7 +472,7 @@ public final class SecurityUtil {
             throw new IllegalArgumentException("Node " + user.getNumber() + " is not a " + USER);
         }
     }
-
+    
     private static void checkRank(Node rank) {
         if (!RANK.equals(rank.getNodeManager().getName())) {
             throw new IllegalArgumentException("Node " + rank.getNumber() + " is not a " + RANK);
@@ -499,12 +480,11 @@ public final class SecurityUtil {
     }
 
     public static List<Node> getUsersWithRights(Node channel, Role requiredRole, String managerName, String relationName) {
-        List<String> treeManagers = new ArrayList<String>();
-        treeManagers.add(managerName);
+        String[] treeManagers = new String[] { managerName };
         return getUsersWithRights(channel, requiredRole, treeManagers, relationName);
     }
 
-    public static List<Node> getUsersWithRights(Node channel, Role requiredRole, List<String> treeManagers, String relationName) {
+    public static List<Node> getUsersWithRights(Node channel, Role requiredRole, String[] treeManagers, String relationName) {
         List<Node> path = TreeUtil.getPathToRoot(channel, treeManagers, relationName);
         List<Node> groups = new ArrayList<Node>();
 
@@ -529,17 +509,18 @@ public final class SecurityUtil {
               }
            }
         }
-
+        
         List<Node> users = new ArrayList<Node>();
         Iterator<Node> groupIter = groups.iterator();
         while (groupIter.hasNext()) {
            Node group = groupIter.next();
            List<Node> userNodes = getMembers(group);
-           for (Node user : userNodes) {
+           for (Iterator<Node> iterator = userNodes.iterator(); iterator.hasNext();) {
+                Node user = iterator.next();
                 addToList(users, user);
            }
         }
-
+        
         return users;
     }
 
